[package]
name = "on_your_marks"
version = "0.1.1"
edition = "2021"
authors = ["CeNiEi"]
description = "Getters and Setters for Rust"
repository = "https://github.com/CeNiEi/on_your_marks"
keywords = ["getters", "setters", "procedural_macros"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["extra-traits", "full"]}
quote = "1.0.23"
proc-macro2 = "1.0.51"
